k8s-files/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/my-bridge: "true"
        io.kompose.service: database
    spec:
      containers:
        - image: mongo
          name: database
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
