k8s-files/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/my-bridge: "true"
        io.kompose.service: server
    spec:
      containers:
        - args:
            - python
            - /scripts/server.py
          image: europe-central2-docker.pkg.dev/dmls-deployment/dmls-repo/dmls-server-test:v0
          name: server
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /scripts/static/content
              name: content-volume
            - mountPath: /scripts/static/models
              name: models-volume
      restartPolicy: Always
      volumes:
        - name: content-volume
          persistentVolumeClaim:
            claimName: content-volume
        - name: models-volume
          persistentVolumeClaim:
            claimName: models-volume
status: {}
