k8s-files/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: database
  name: database

spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
