k8s-files/pipeline-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: pipeline
  name: pipeline
spec:
  ports:
    - name: "10122"
      port: 10122
      targetPort: 8080
  selector:
    io.kompose.service: pipeline
status:
  loadBalancer: {}
