k8s-files/server-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: server-tcp
  name: server-tcp

spec:
  ports:
    - name: "10121"
      port: 10121
      targetPort: 8000
  selector:
    io.kompose.service: server
  
  type: LoadBalancer
status:
  loadBalancer: {}
