k8s-files/my-bridge-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: my-bridge

spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/my-bridge: "true"
  podSelector:
    matchLabels:
      io.kompose.network/my-bridge: "true"
